--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@babel/preset-typescript": "^7.22.5",
     "@types/jest": "^29.5.3",
     "babel-jest": "^29.6.1",
-    "jest": "^29.6.1"
+    "jest": "^29.6.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
